plugins {
    id 'java'
    id 'idea'
    id 'eclipse'
    id 'org.springframework.boot' version '3.4.4'
    id 'io.spring.dependency-management' version '1.1.6'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}

repositories {
    mavenCentral()
}

configurations {
    developmentOnly
    runtimeClasspath {
        extendsFrom developmentOnly
    }
}

dependencies {
    // Spring Boot managed (versions from BOM)
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-jdbc'
    implementation 'org.springframework.security:spring-security-taglibs'
    implementation 'org.apache.tomcat.embed:tomcat-embed-jasper'

    // JSTL — Jakarta EE 9+ (required for Tomcat 10 / Spring Boot 3)
    implementation 'jakarta.servlet.jsp.jstl:jakarta.servlet.jsp.jstl-api:3.0.0'
    implementation 'org.glassfish.web:jakarta.servlet.jsp.jstl:3.0.1'

    // JAXB (jakarta namespace, managed by Spring Boot BOM)
    implementation 'jakarta.xml.bind:jakarta.xml.bind-api'

    // Third-party libraries
    implementation 'commons-codec:commons-codec:1.16.1'
    implementation 'com.google.zxing:javase:3.5.3'
    implementation ('org.owasp.esapi:esapi:2.5.3.1') {
        exclude group: 'xml-apis', module: 'xml-apis'
    }
    implementation 'org.owasp.encoder:encoder:1.3.1'
    implementation 'org.owasp.encoder:encoder-jsp:1.3.1'
    implementation 'com.googlecode.owasp-java-html-sanitizer:owasp-java-html-sanitizer:20220608.1'
    implementation 'com.google.guava:guava:33.2.1-jre'

    ////// <SNIP> Comment this out if running with hsqldb
    implementation 'org.postgresql:postgresql:42.7.4'
    ////// <SNAP>

    ////// <SNIP> Comment this out if running with postgresql
    // implementation 'org.hsqldb:hsqldb:2.7.3'
    ////// <SNAP>
}